base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-db
  namespace: staging
spec:
  selector:
    matchLabels:
      app: blog-db
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: blog-db
    spec:
      containers:
      - image: mysql:5.7.35
        name: blog-db
        ports:
        - containerPort: 3306
          name: blog-db
        volumeMounts:
        - name: blog-db-pv
          mountPath: /var/lib/mysql
      volumes:
      - name: blog-db-pv
        persistentVolumeClaim:
          claimName: blog-db-pv-claim
