base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: blog
  name: blog
  namespace: staging
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: blog
  template:
    metadata:
      name: blog
      labels:
        name: blog
    spec:
      containers:
      - image: ghost:4.12.1
        name: blog
        ports:
        - containerPort: 2368
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
