base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-db
  namespace: staging
spec:
  ports:
  - port: 3306
  selector:
    app: blog-db
  clusterIP: None
