base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - cms-uat.hsc.com.vn
    secretName: hsc-secret
  rules:
  - host: cms-uat.hsc.com.vn
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog
            port:
              number: 2368
